[package]
name = "kangaroos"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
kangaroos-macros = { path = "../kangaroos-macros" }
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }

[features]
default = []
defmt   = ["dep:defmt"]

[dependencies.defmt]
version = "0.3"
optional = true

