[package]
name = "blinky"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "blinky"
test = false
bench = false

[dependencies]
kangaroos = { path = "../../kangaroos" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"

[dependencies.defmt]
version = "0.3"
optional = true

[dependencies.defmt-semihosting]
version = "0.1"
optional = true

[features]
defmt = ["dep:defmt", "dep:defmt-semihosting", "kangaroos/defmt"]